@@ -4,6 +4,7 @@ Revision history for Task-Sites-ShlomiFish:
         - Add Spork::Shlomify , Text::VimColor and XML::Grammar::Fiction
         that are now needed to build the site.
         - Remove WWW::Google::SiteMap - no longer needed.
+        - Add the tag-release.pl file to tag a release using Subversion.
 
 0.0202    Wed Mar  4 15:12:10 IST 2009
         - Added more dependencies: App::XML::DocBook::Builder , 
